--- a/src/main/resources/assets/mystcraft/lang/nl_NL.lang
+++ b/src/main/resources/assets/mystcraft/lang/nl_NL.lang
@@ -70,81 +70,81 @@ linkeffect.intralinking.name=Intra-Dimensioneel Linken
 linkeffect.maintainmomentum.name=Momentum behouden
 linkeffect.relative.name=Relatieve Link
 
-mystsymbol.BioConHuge.name=Gigantische Biomen
-mystsymbol.BioConLarge.name=Grote Biomen
-mystsymbol.BioConMedium.name=Middelmatige Biomen
-mystsymbol.BioConNative.name=Normale Bioom Bestuurder
-mystsymbol.BioConSingle.name=Enkel Bioom
-mystsymbol.BioConSmall.name=Klein Bioom
-mystsymbol.BioConTiled.name=Getegelde Biomen
-mystsymbol.BioConTiny.name=Minescule Biomen
-mystsymbol.Caves.name=Grotten
-mystsymbol.ColorCloud.name=Wolken Kleur
-mystsymbol.ColorCloudNat.name=Natuurlijke Wolken Kleur
-mystsymbol.ColorFog.name=Mist Kleur
-mystsymbol.ColorFogNat.name=Natuurlijke Mist Kleur
-mystsymbol.ColorFoliage.name=Blader Kleur
-mystsymbol.ColorFoliageNat.name=Natuurlijke Blader Kleur
-mystsymbol.ColorGrass.name=Gras Kleur
-mystsymbol.ColorGrassNat.name=Natuurlijke Gras Kleur
-mystsymbol.ColorHorizon.name=Zonsondergangs Kleur
-mystsymbol.ColorSky.name=Lucht Kleur
-mystsymbol.ColorSkyNat.name=Natuurlijke Lucht Kleur
-mystsymbol.ColorSkyNight.name=Nacht Lucht Kleur
-mystsymbol.ColorWater.name=Water Kleur
-mystsymbol.ColorWaterNat.name=Natuurlijke Water Kleur
-mystsymbol.CryForm.name=Kristalleine Formaties
-mystsymbol.DenseOres.name=Dichte Erts
-mystsymbol.Dungeons.name=Kerkers
-mystsymbol.EnvAccel.name=Versneld
-mystsymbol.EnvExplosions.name=Spontane Explosies
-mystsymbol.EnvLightning.name=Bliksem
-mystsymbol.EnvMeteor.name=Meteorieten
-mystsymbol.EnvScorch.name=Brandend Oppervlak
-mystsymbol.Flat.name=Platte Wereld
-mystsymbol.FloatIslands.name=Vliegende Eilanden
-mystsymbol.GenSpikes.name=Stekels
-mystsymbol.HugeTrees.name=Gigantische Bomen
-mystsymbol.LakesDeep.name=Diepe Meren
-mystsymbol.LakesSurface.name=Oppervlakte Meren
-mystsymbol.LightingBright.name=Felle Belichting
-mystsymbol.LightingDark.name=Donkere Belichting
-mystsymbol.LightingNormal.name=Normale Belichting
-mystsymbol.Mineshafts.name=Mijnschaften
-mystsymbol.ModClear.name=Verwijder Modificaties
-mystsymbol.ModGradient.name=Helling
-mystsymbol.MoonDark.name=Donkere Maan
-mystsymbol.MoonNormal.name=Normale Maan
-mystsymbol.NetherFort.name=Nether Fort
-mystsymbol.NoHorizon.name=Grenzeloze Lucht
-mystsymbol.NoSea.name=Geen Zeeën
-mystsymbol.Obelisks.name=Obelisken
-mystsymbol.PvPOff.name=Geen PvP
-mystsymbol.Rainbow.name=Regenboog
-mystsymbol.Ravines.name=Ravijnen
-mystsymbol.Skylands.name=Luchtlanden
-mystsymbol.StarFissure.name=Sterren Scheur
-mystsymbol.StarsDark.name=Donkere Sterren
-mystsymbol.StarsEndSky.name=Ender Sterrenveld
-mystsymbol.StarsNormal.name=Normale Sterren
-mystsymbol.StarsTwinkle.name=Twinkelende Sterren
-mystsymbol.Strongholds.name=Burchten
-mystsymbol.SunDark.name=Donkere Zon
-mystsymbol.SunNormal.name=Normale Zon
-mystsymbol.Tendrils.name=Scheuten
-mystsymbol.TerModSpheres.name=Bollen
-mystsymbol.TerrainAmplified.name=Versterkte Normale Wereld
-mystsymbol.TerrainEnd.name=Eilanden-Wereld
-mystsymbol.TerrainNether.name=Grotten-Wereld
-mystsymbol.TerrainNormal.name=Standaard-Wereld
-mystsymbol.WeatherCloudy.name=Regenachtig
-mystsymbol.WeatherFast.name=Snel Weer
-mystsymbol.WeatherNorm.name=Normaal Weer
-mystsymbol.WeatherOff.name=Geen Weer
-mystsymbol.WeatherOn.name=Eeuwig Weer
-mystsymbol.WeatherRain.name=Eeuwige Regen
-mystsymbol.WeatherSlow.name=Langzaam Weer
-mystsymbol.WeatherSnow.name=Eeuwige Sneeuw
-mystsymbol.WeatherStorm.name=Eeuwige Storm
-mystsymbol.Villages.name=Dorpen
-mystsymbol.Void.name=Lege Wereld
+myst.symbol.BioConHuge.name=Gigantische Biomen
+myst.symbol.BioConLarge.name=Grote Biomen
+myst.symbol.BioConMedium.name=Middelmatige Biomen
+myst.symbol.BioConNative.name=Normale Bioom Bestuurder
+myst.symbol.BioConSingle.name=Enkel Bioom
+myst.symbol.BioConSmall.name=Klein Bioom
+myst.symbol.BioConTiled.name=Getegelde Biomen
+myst.symbol.BioConTiny.name=Minescule Biomen
+myst.symbol.Caves.name=Grotten
+myst.symbol.ColorCloud.name=Wolken Kleur
+myst.symbol.ColorCloudNat.name=Natuurlijke Wolken Kleur
+myst.symbol.ColorFog.name=Mist Kleur
+myst.symbol.ColorFogNat.name=Natuurlijke Mist Kleur
+myst.symbol.ColorFoliage.name=Blader Kleur
+myst.symbol.ColorFoliageNat.name=Natuurlijke Blader Kleur
+myst.symbol.ColorGrass.name=Gras Kleur
+myst.symbol.ColorGrassNat.name=Natuurlijke Gras Kleur
+myst.symbol.ColorHorizon.name=Zonsondergangs Kleur
+myst.symbol.ColorSky.name=Lucht Kleur
+myst.symbol.ColorSkyNat.name=Natuurlijke Lucht Kleur
+myst.symbol.ColorSkyNight.name=Nacht Lucht Kleur
+myst.symbol.ColorWater.name=Water Kleur
+myst.symbol.ColorWaterNat.name=Natuurlijke Water Kleur
+myst.symbol.CryForm.name=Kristalleine Formaties
+myst.symbol.DenseOres.name=Dichte Erts
+myst.symbol.Dungeons.name=Kerkers
+myst.symbol.EnvAccel.name=Versneld
+myst.symbol.EnvExplosions.name=Spontane Explosies
+myst.symbol.EnvLightning.name=Bliksem
+myst.symbol.EnvMeteor.name=Meteorieten
+myst.symbol.EnvScorch.name=Brandend Oppervlak
+myst.symbol.Flat.name=Platte Wereld
+myst.symbol.FloatIslands.name=Vliegende Eilanden
+myst.symbol.GenSpikes.name=Stekels
+myst.symbol.HugeTrees.name=Gigantische Bomen
+myst.symbol.LakesDeep.name=Diepe Meren
+myst.symbol.LakesSurface.name=Oppervlakte Meren
+myst.symbol.LightingBright.name=Felle Belichting
+myst.symbol.LightingDark.name=Donkere Belichting
+myst.symbol.LightingNormal.name=Normale Belichting
+myst.symbol.Mineshafts.name=Mijnschaften
+myst.symbol.ModClear.name=Verwijder Modificaties
+myst.symbol.ModGradient.name=Helling
+myst.symbol.MoonDark.name=Donkere Maan
+myst.symbol.MoonNormal.name=Normale Maan
+myst.symbol.NetherFort.name=Nether Fort
+myst.symbol.NoHorizon.name=Grenzeloze Lucht
+myst.symbol.NoSea.name=Geen Zeeën
+myst.symbol.Obelisks.name=Obelisken
+myst.symbol.PvPOff.name=Geen PvP
+myst.symbol.Rainbow.name=Regenboog
+myst.symbol.Ravines.name=Ravijnen
+myst.symbol.Skylands.name=Luchtlanden
+myst.symbol.StarFissure.name=Sterren Scheur
+myst.symbol.StarsDark.name=Donkere Sterren
+myst.symbol.StarsEndSky.name=Ender Sterrenveld
+myst.symbol.StarsNormal.name=Normale Sterren
+myst.symbol.StarsTwinkle.name=Twinkelende Sterren
+myst.symbol.Strongholds.name=Burchten
+myst.symbol.SunDark.name=Donkere Zon
+myst.symbol.SunNormal.name=Normale Zon
+myst.symbol.Tendrils.name=Scheuten
+myst.symbol.TerModSpheres.name=Bollen
+myst.symbol.TerrainAmplified.name=Versterkte Normale Wereld
+myst.symbol.TerrainEnd.name=Eilanden-Wereld
+myst.symbol.TerrainNether.name=Grotten-Wereld
+myst.symbol.TerrainNormal.name=Standaard-Wereld
+myst.symbol.WeatherCloudy.name=Regenachtig
+myst.symbol.WeatherFast.name=Snel Weer
+myst.symbol.WeatherNorm.name=Normaal Weer
+myst.symbol.WeatherOff.name=Geen Weer
+myst.symbol.WeatherOn.name=Eeuwig Weer
+myst.symbol.WeatherRain.name=Eeuwige Regen
+myst.symbol.WeatherSlow.name=Langzaam Weer
+myst.symbol.WeatherSnow.name=Eeuwige Sneeuw
+myst.symbol.WeatherStorm.name=Eeuwige Storm
+myst.symbol.Villages.name=Dorpen
+myst.symbol.Void.name=Lege Wereld
