--- a/src/main/resources/assets/mystcraft/lang/cs_CZ.lang
+++ b/src/main/resources/assets/mystcraft/lang/cs_CZ.lang
@@ -70,81 +70,81 @@ linkeffect.intralinking.name=Odkaz ve stejné dimenzi
 linkeffect.maintainmomentum.name=Zachování pohybu
 linkeffect.relative.name=Relativní odkaz
 
-mystsymbol.BioConHuge.name=Obrovské biomy
-mystsymbol.BioConLarge.name=Velké biomy
-mystsymbol.BioConMedium.name=Střední biomy
-mystsymbol.BioConNative.name=Přirozené rozčlenění biomů
-mystsymbol.BioConSingle.name=Jediný biom
-mystsymbol.BioConSmall.name=Malé biomy
-mystsymbol.BioConTiled.name=Dlaždicové biomy
-mystsymbol.BioConTiny.name=Nejmenší biomy
-mystsymbol.Caves.name=Jeskyně
-mystsymbol.ColorCloud.name=Barva mraků
-mystsymbol.ColorCloudNat.name=Přirozená barva mraků
-mystsymbol.ColorFog.name=Barva mlhy
-mystsymbol.ColorFogNat.name=Přirozená barva mlhy
-mystsymbol.ColorFoliage.name=Barva listí
-mystsymbol.ColorFoliageNat.name=Přirozená barva listí
-mystsymbol.ColorGrass.name=Barva trávy
-mystsymbol.ColorGrassNat.name=Přirozená barva trávy
-mystsymbol.ColorHorizon.name=Barva západu slunce
-mystsymbol.ColorSky.name=Barva oblohy
-mystsymbol.ColorSkyNat.name=Přirozená barva oblohy
-mystsymbol.ColorSkyNight.name=Noční barva oblohy
-mystsymbol.ColorWater.name=Barva vody
-mystsymbol.ColorWaterNat.name=Přirozená barva vody
-mystsymbol.CryForm.name=Uskupení krystalů
-mystsymbol.DenseOres.name=Zhuštěné rudy
-mystsymbol.Dungeons.name=Líhně
-mystsymbol.EnvAccel.name=Zrychlení
-mystsymbol.EnvExplosions.name=Spontánní výbuchy
-mystsymbol.EnvLightning.name=Blesky
-mystsymbol.EnvMeteor.name=Meteory
-mystsymbol.EnvScorch.name=Spálený povrch
-mystsymbol.Flat.name=Rovinný svět
-mystsymbol.FloatIslands.name=Vznášející ostrovy
-mystsymbol.GenSpikes.name=Ostny
-mystsymbol.HugeTrees.name=Obrovské stromy
-mystsymbol.LakesDeep.name=Hluboká jezera
-mystsymbol.LakesSurface.name=Povrchová jezera
-mystsymbol.LightingBright.name=Světlé osvětlení
-mystsymbol.LightingDark.name=Tmavé osvětlení
-mystsymbol.LightingNormal.name=Normální osvětlení
-mystsymbol.Mineshafts.name=Důlní šachty
-mystsymbol.ModClear.name=Čistič modifikátorů
-mystsymbol.ModGradient.name=Barevný přechod
-mystsymbol.MoonDark.name=Temný měsíc
-mystsymbol.MoonNormal.name=Normální měsíc
-mystsymbol.NetherFort.name=Netherová pevnost
-mystsymbol.NoHorizon.name=Nekonečná obloha
-mystsymbol.NoSea.name=Žádné moře
-mystsymbol.Obelisks.name=Obelisky
-mystsymbol.PvPOff.name=Anti-PvP
-mystsymbol.Rainbow.name=Duha
-mystsymbol.Ravines.name=Rokle
-mystsymbol.Skylands.name=Nebeská krajina
-mystsymbol.StarFissure.name=Hvězdná trhlina
-mystsymbol.StarsDark.name=Temné hvězdy
-mystsymbol.StarsEndSky.name=Enderové hvězdy
-mystsymbol.StarsNormal.name=Normální hvězdy
-mystsymbol.StarsTwinkle.name=Mihotavé hvězdy
-mystsymbol.Strongholds.name=Pevnosti
-mystsymbol.SunDark.name=Temné slunce
-mystsymbol.SunNormal.name=Normální slunce
-mystsymbol.Tendrils.name=Úponky
-mystsymbol.TerModSpheres.name=Koule
-mystsymbol.TerrainAmplified.name=Svět s extrémním terénem
-mystsymbol.TerrainEnd.name=Ostrovní svět
-mystsymbol.TerrainNether.name=Jeskynní svět
-mystsymbol.TerrainNormal.name=Standardní svět
-mystsymbol.WeatherCloudy.name=Zataženo
-mystsymbol.WeatherFast.name=Rychlé počasí
-mystsymbol.WeatherNorm.name=Normální počasí
-mystsymbol.WeatherOff.name=Žádné počasí
-mystsymbol.WeatherOn.name=Věčné počasí
-mystsymbol.WeatherRain.name=Věčný déšť
-mystsymbol.WeatherSlow.name=Pomalé počasí
-mystsymbol.WeatherSnow.name=Věčná sněhová bouře
-mystsymbol.WeatherStorm.name=Věčná bouře
-mystsymbol.Villages.name=Vesnice
-mystsymbol.Void.name=Prázdný svět
+myst.symbol.BioConHuge.name=Obrovské biomy
+myst.symbol.BioConLarge.name=Velké biomy
+myst.symbol.BioConMedium.name=Střední biomy
+myst.symbol.BioConNative.name=Přirozené rozčlenění biomů
+myst.symbol.BioConSingle.name=Jediný biom
+myst.symbol.BioConSmall.name=Malé biomy
+myst.symbol.BioConTiled.name=Dlaždicové biomy
+myst.symbol.BioConTiny.name=Nejmenší biomy
+myst.symbol.Caves.name=Jeskyně
+myst.symbol.ColorCloud.name=Barva mraků
+myst.symbol.ColorCloudNat.name=Přirozená barva mraků
+myst.symbol.ColorFog.name=Barva mlhy
+myst.symbol.ColorFogNat.name=Přirozená barva mlhy
+myst.symbol.ColorFoliage.name=Barva listí
+myst.symbol.ColorFoliageNat.name=Přirozená barva listí
+myst.symbol.ColorGrass.name=Barva trávy
+myst.symbol.ColorGrassNat.name=Přirozená barva trávy
+myst.symbol.ColorHorizon.name=Barva západu slunce
+myst.symbol.ColorSky.name=Barva oblohy
+myst.symbol.ColorSkyNat.name=Přirozená barva oblohy
+myst.symbol.ColorSkyNight.name=Noční barva oblohy
+myst.symbol.ColorWater.name=Barva vody
+myst.symbol.ColorWaterNat.name=Přirozená barva vody
+myst.symbol.CryForm.name=Uskupení krystalů
+myst.symbol.DenseOres.name=Zhuštěné rudy
+myst.symbol.Dungeons.name=Líhně
+myst.symbol.EnvAccel.name=Zrychlení
+myst.symbol.EnvExplosions.name=Spontánní výbuchy
+myst.symbol.EnvLightning.name=Blesky
+myst.symbol.EnvMeteor.name=Meteory
+myst.symbol.EnvScorch.name=Spálený povrch
+myst.symbol.Flat.name=Rovinný svět
+myst.symbol.FloatIslands.name=Vznášející ostrovy
+myst.symbol.GenSpikes.name=Ostny
+myst.symbol.HugeTrees.name=Obrovské stromy
+myst.symbol.LakesDeep.name=Hluboká jezera
+myst.symbol.LakesSurface.name=Povrchová jezera
+myst.symbol.LightingBright.name=Světlé osvětlení
+myst.symbol.LightingDark.name=Tmavé osvětlení
+myst.symbol.LightingNormal.name=Normální osvětlení
+myst.symbol.Mineshafts.name=Důlní šachty
+myst.symbol.ModClear.name=Čistič modifikátorů
+myst.symbol.ModGradient.name=Barevný přechod
+myst.symbol.MoonDark.name=Temný měsíc
+myst.symbol.MoonNormal.name=Normální měsíc
+myst.symbol.NetherFort.name=Netherová pevnost
+myst.symbol.NoHorizon.name=Nekonečná obloha
+myst.symbol.NoSea.name=Žádné moře
+myst.symbol.Obelisks.name=Obelisky
+myst.symbol.PvPOff.name=Anti-PvP
+myst.symbol.Rainbow.name=Duha
+myst.symbol.Ravines.name=Rokle
+myst.symbol.Skylands.name=Nebeská krajina
+myst.symbol.StarFissure.name=Hvězdná trhlina
+myst.symbol.StarsDark.name=Temné hvězdy
+myst.symbol.StarsEndSky.name=Enderové hvězdy
+myst.symbol.StarsNormal.name=Normální hvězdy
+myst.symbol.StarsTwinkle.name=Mihotavé hvězdy
+myst.symbol.Strongholds.name=Pevnosti
+myst.symbol.SunDark.name=Temné slunce
+myst.symbol.SunNormal.name=Normální slunce
+myst.symbol.Tendrils.name=Úponky
+myst.symbol.TerModSpheres.name=Koule
+myst.symbol.TerrainAmplified.name=Svět s extrémním terénem
+myst.symbol.TerrainEnd.name=Ostrovní svět
+myst.symbol.TerrainNether.name=Jeskynní svět
+myst.symbol.TerrainNormal.name=Standardní svět
+myst.symbol.WeatherCloudy.name=Zataženo
+myst.symbol.WeatherFast.name=Rychlé počasí
+myst.symbol.WeatherNorm.name=Normální počasí
+myst.symbol.WeatherOff.name=Žádné počasí
+myst.symbol.WeatherOn.name=Věčné počasí
+myst.symbol.WeatherRain.name=Věčný déšť
+myst.symbol.WeatherSlow.name=Pomalé počasí
+myst.symbol.WeatherSnow.name=Věčná sněhová bouře
+myst.symbol.WeatherStorm.name=Věčná bouře
+myst.symbol.Villages.name=Vesnice
+myst.symbol.Void.name=Prázdný svět
