--- a/src/main/resources/assets/mystcraft/lang/en_GB.lang
+++ b/src/main/resources/assets/mystcraft/lang/en_GB.lang
@@ -1,14 +1,14 @@
-mystsymbol.ColorCloud.name=Cloud Colour
-mystsymbol.ColorCloudNat.name=Natural Cloud Colour
-mystsymbol.ColorFog.name=Fog Colour
-mystsymbol.ColorFogNat.name=Natural Fog Colour
-mystsymbol.ColorFoliage.name=Foliage Colour
-mystsymbol.ColorFoliageNat.name=Natural Foliage Colour
-mystsymbol.ColorGrass.name=Grass Colour
-mystsymbol.ColorGrassNat.name=Natural Grass Colour
-mystsymbol.ColorHorizon.name=Sunset Colour
-mystsymbol.ColorSky.name=Sky Colour
-mystsymbol.ColorSkyNat.name=Natural Sky Colour
-mystsymbol.ColorSkyNight.name=Night Sky Colour
-mystsymbol.ColorWater.name=Water Colour
-mystsymbol.ColorWaterNat.name=Natural Water Colour
+myst.symbol.ColorCloud.name=Cloud Colour
+myst.symbol.ColorCloudNat.name=Natural Cloud Colour
+myst.symbol.ColorFog.name=Fog Colour
+myst.symbol.ColorFogNat.name=Natural Fog Colour
+myst.symbol.ColorFoliage.name=Foliage Colour
+myst.symbol.ColorFoliageNat.name=Natural Foliage Colour
+myst.symbol.ColorGrass.name=Grass Colour
+myst.symbol.ColorGrassNat.name=Natural Grass Colour
+myst.symbol.ColorHorizon.name=Sunset Colour
+myst.symbol.ColorSky.name=Sky Colour
+myst.symbol.ColorSkyNat.name=Natural Sky Colour
+myst.symbol.ColorSkyNight.name=Night Sky Colour
+myst.symbol.ColorWater.name=Water Colour
+myst.symbol.ColorWaterNat.name=Natural Water Colour
