--- a/src/main/resources/assets/mystcraft/lang/fi_FI.lang
+++ b/src/main/resources/assets/mystcraft/lang/fi_FI.lang
@@ -70,81 +70,81 @@ linkeffect.intralinking.name=Sisäinen linkitys
 linkeffect.maintainmomentum.name=Ylläpitää liike
 linkeffect.relative.name=Suhteellinen linkki
 
-mystsymbol.BioConHuge.name=Valtavat biomit
-mystsymbol.BioConLarge.name=Suuret biomit
-mystsymbol.BioConMedium.name=Keskikokoiset biomit
-mystsymbol.BioConNative.name=Luonnollinen biomiohjain
-mystsymbol.BioConSingle.name=Yksittäinen biomi
-mystsymbol.BioConSmall.name=Pienet biomit
-mystsymbol.BioConTiled.name=Laatoitetut biomit
-mystsymbol.BioConTiny.name=Hyvin pienet biomit
-mystsymbol.Caves.name=Luolia
-mystsymbol.ColorCloud.name=Pilvien väri
-mystsymbol.ColorCloudNat.name=Luonnollinen pilvien väri
-mystsymbol.ColorFog.name=Sumun väri
-mystsymbol.ColorFogNat.name=Luonnollinen sumun väri
-mystsymbol.ColorFoliage.name=Lehvistön väri
-mystsymbol.ColorFoliageNat.name=Luonnollinen lehvistön väri
-mystsymbol.ColorGrass.name=Ruohon väri
-mystsymbol.ColorGrassNat.name=Luonnollinen ruohon väri
-mystsymbol.ColorHorizon.name=Auringonlaskun väri
-mystsymbol.ColorSky.name=Taivaan väri
-mystsymbol.ColorSkyNat.name=Luonnollinen taivaan väri
-mystsymbol.ColorSkyNight.name=Yötaivaan väri
-mystsymbol.ColorWater.name=Veden väri
-mystsymbol.ColorWaterNat.name=Luonnollinen veden väri
-mystsymbol.CryForm.name=Kidemuodostelmia
-mystsymbol.DenseOres.name=Tiheät malmit
-mystsymbol.Dungeons.name=Tyrmiä
-mystsymbol.EnvAccel.name=Kiihdytetty
-mystsymbol.EnvExplosions.name=Spontaani räjähtely
-mystsymbol.EnvLightning.name=Salamoita
-mystsymbol.EnvMeteor.name=Meteoreja
-mystsymbol.EnvScorch.name=Poltettu pinta
-mystsymbol.Flat.name=Tasainen maailma
-mystsymbol.FloatIslands.name=Leijuvat saaret
-mystsymbol.GenSpikes.name=Piikkejä
-mystsymbol.HugeTrees.name=Valtavia puita
-mystsymbol.LakesDeep.name=Syviä järviä
-mystsymbol.LakesSurface.name=Pintajärviä
-mystsymbol.LightingBright.name=Kirkas valaistus
-mystsymbol.LightingDark.name=Pimeä valaistus
-mystsymbol.LightingNormal.name=Normaali valaistus
-mystsymbol.Mineshafts.name=Kaivoskuiluja
-mystsymbol.ModClear.name=Nollaa määritelmät
-mystsymbol.ModGradient.name=Gradientti
-mystsymbol.MoonDark.name=Pimeä kuu
-mystsymbol.MoonNormal.name=Normaali kuu
-mystsymbol.NetherFort.name=Hornalinnoituksia
-mystsymbol.NoHorizon.name=Ei horisonttia
-mystsymbol.NoSea.name=Ei meriä
-mystsymbol.Obelisks.name=Obeliskeja
-mystsymbol.PvPOff.name=Ei PvP:tä
-mystsymbol.Rainbow.name=Sateenkaari
-mystsymbol.Ravines.name=Rotkoja
-mystsymbol.Skylands.name=Taivasmaat
-mystsymbol.StarFissure.name=Tähtihalkeama
-mystsymbol.StarsDark.name=Pimeät tähdet
-mystsymbol.StarsEndSky.name=Ender-tähdistö
-mystsymbol.StarsNormal.name=Normaalit tähdet
-mystsymbol.StarsTwinkle.name=Tuikkivat tähdet
-mystsymbol.Strongholds.name=Linnoituksia
-mystsymbol.SunDark.name=Pimeä aurinko
-mystsymbol.SunNormal.name=Normaali aurinko
-mystsymbol.Tendrils.name=Kärhiä
-mystsymbol.TerModSpheres.name=Palloja
-mystsymbol.TerrainAmplified.name=Vahvistettu normaali maailma
-mystsymbol.TerrainEnd.name=Saarimaalima
-mystsymbol.TerrainNether.name=Luolamaailma
-mystsymbol.TerrainNormal.name=Tavallinen maailma
-mystsymbol.WeatherCloudy.name=Pilvinen sää
-mystsymbol.WeatherFast.name=Nopea sää
-mystsymbol.WeatherNorm.name=Normaali sää
-mystsymbol.WeatherOff.name=Ei säätä
-mystsymbol.WeatherOn.name=Ikuinen sää
-mystsymbol.WeatherRain.name=Ikuinen sade
-mystsymbol.WeatherSlow.name=Hidas sää
-mystsymbol.WeatherSnow.name=Ikuinen lumisade
-mystsymbol.WeatherStorm.name=Ikuinen myrsky
-mystsymbol.Villages.name=Kyliä
-mystsymbol.Void.name=Tyhjä maailma
+myst.symbol.BioConHuge.name=Valtavat biomit
+myst.symbol.BioConLarge.name=Suuret biomit
+myst.symbol.BioConMedium.name=Keskikokoiset biomit
+myst.symbol.BioConNative.name=Luonnollinen biomiohjain
+myst.symbol.BioConSingle.name=Yksittäinen biomi
+myst.symbol.BioConSmall.name=Pienet biomit
+myst.symbol.BioConTiled.name=Laatoitetut biomit
+myst.symbol.BioConTiny.name=Hyvin pienet biomit
+myst.symbol.Caves.name=Luolia
+myst.symbol.ColorCloud.name=Pilvien väri
+myst.symbol.ColorCloudNat.name=Luonnollinen pilvien väri
+myst.symbol.ColorFog.name=Sumun väri
+myst.symbol.ColorFogNat.name=Luonnollinen sumun väri
+myst.symbol.ColorFoliage.name=Lehvistön väri
+myst.symbol.ColorFoliageNat.name=Luonnollinen lehvistön väri
+myst.symbol.ColorGrass.name=Ruohon väri
+myst.symbol.ColorGrassNat.name=Luonnollinen ruohon väri
+myst.symbol.ColorHorizon.name=Auringonlaskun väri
+myst.symbol.ColorSky.name=Taivaan väri
+myst.symbol.ColorSkyNat.name=Luonnollinen taivaan väri
+myst.symbol.ColorSkyNight.name=Yötaivaan väri
+myst.symbol.ColorWater.name=Veden väri
+myst.symbol.ColorWaterNat.name=Luonnollinen veden väri
+myst.symbol.CryForm.name=Kidemuodostelmia
+myst.symbol.DenseOres.name=Tiheät malmit
+myst.symbol.Dungeons.name=Tyrmiä
+myst.symbol.EnvAccel.name=Kiihdytetty
+myst.symbol.EnvExplosions.name=Spontaani räjähtely
+myst.symbol.EnvLightning.name=Salamoita
+myst.symbol.EnvMeteor.name=Meteoreja
+myst.symbol.EnvScorch.name=Poltettu pinta
+myst.symbol.Flat.name=Tasainen maailma
+myst.symbol.FloatIslands.name=Leijuvat saaret
+myst.symbol.GenSpikes.name=Piikkejä
+myst.symbol.HugeTrees.name=Valtavia puita
+myst.symbol.LakesDeep.name=Syviä järviä
+myst.symbol.LakesSurface.name=Pintajärviä
+myst.symbol.LightingBright.name=Kirkas valaistus
+myst.symbol.LightingDark.name=Pimeä valaistus
+myst.symbol.LightingNormal.name=Normaali valaistus
+myst.symbol.Mineshafts.name=Kaivoskuiluja
+myst.symbol.ModClear.name=Nollaa määritelmät
+myst.symbol.ModGradient.name=Gradientti
+myst.symbol.MoonDark.name=Pimeä kuu
+myst.symbol.MoonNormal.name=Normaali kuu
+myst.symbol.NetherFort.name=Hornalinnoituksia
+myst.symbol.NoHorizon.name=Ei horisonttia
+myst.symbol.NoSea.name=Ei meriä
+myst.symbol.Obelisks.name=Obeliskeja
+myst.symbol.PvPOff.name=Ei PvP:tä
+myst.symbol.Rainbow.name=Sateenkaari
+myst.symbol.Ravines.name=Rotkoja
+myst.symbol.Skylands.name=Taivasmaat
+myst.symbol.StarFissure.name=Tähtihalkeama
+myst.symbol.StarsDark.name=Pimeät tähdet
+myst.symbol.StarsEndSky.name=Ender-tähdistö
+myst.symbol.StarsNormal.name=Normaalit tähdet
+myst.symbol.StarsTwinkle.name=Tuikkivat tähdet
+myst.symbol.Strongholds.name=Linnoituksia
+myst.symbol.SunDark.name=Pimeä aurinko
+myst.symbol.SunNormal.name=Normaali aurinko
+myst.symbol.Tendrils.name=Kärhiä
+myst.symbol.TerModSpheres.name=Palloja
+myst.symbol.TerrainAmplified.name=Vahvistettu normaali maailma
+myst.symbol.TerrainEnd.name=Saarimaalima
+myst.symbol.TerrainNether.name=Luolamaailma
+myst.symbol.TerrainNormal.name=Tavallinen maailma
+myst.symbol.WeatherCloudy.name=Pilvinen sää
+myst.symbol.WeatherFast.name=Nopea sää
+myst.symbol.WeatherNorm.name=Normaali sää
+myst.symbol.WeatherOff.name=Ei säätä
+myst.symbol.WeatherOn.name=Ikuinen sää
+myst.symbol.WeatherRain.name=Ikuinen sade
+myst.symbol.WeatherSlow.name=Hidas sää
+myst.symbol.WeatherSnow.name=Ikuinen lumisade
+myst.symbol.WeatherStorm.name=Ikuinen myrsky
+myst.symbol.Villages.name=Kyliä
+myst.symbol.Void.name=Tyhjä maailma
