--- a/src/main/resources/assets/mystcraft/lang/en_US.lang
+++ b/src/main/resources/assets/mystcraft/lang/en_US.lang
@@ -41,7 +41,7 @@ tile.myst.starfissure.name=Star Fissure
 tile.myst.writing_desk.name=Writing Desk
 
 item.myst.agebook.name=Descriptive Book
-item.myst.linkbook.name=Linking book
+item.myst.linkbook.name=Linking Book
 item.myst.folder.name=Collation Folder
 item.myst.portfolio.name=Symbol Portfolio
 item.myst.booster.name=Sealed Notebook
